Changed data in leaves of sunburst + attempt on sunburstClicked
However sunburstClicked is not working proparly, perhaps because one
transition interrupts another one

--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,14 @@ text#caption_ip {
   font-size: 1.4em;
 }
 
+.visible_strip {
+  visibility: visible;
+}
+
+.invisible_strip {
+  visibility: hidden !important;
+}
+
 
 
 /* responsive */
