--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ path {
   stroke-width: .5px;
 }
 
-path:hover {
+path.country-boundary:hover {
   /*fill: #E9CB60;*/
   fill: gray !important;
   /*stroke: black;
