--- a/css/menu.css
+++ b/css/menu.css
@@ -12,7 +12,7 @@ button {
 h2 {
   font-size: 15px;
   font-weight: bolder;
-  margin-bottom: ;
+  /*margin-bottom: ;*/
 }
 
 h3 {
@@ -47,11 +47,19 @@ h3 {
   margin-top: 40px;
 }
 
-
-
 #topmenu {
   background-color: #dddddd;
   width: auto;
   height: 185px;
   border: 1px solid black;
+}
+
+.check-attacks {
+  display: block;
+  background-color: #fff;
+  height: 105px;
+  width: 218px;
+  padding: 0;
+  overflow-y: scroll;
+  border: 1px solid gray;  
 }
