Gradual revealing of country names depending on country size
closes #66

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,10 @@ path.victim path.attacker {
   fill: gray !important;
 }
 
+text.hidden {
+  visibility: hidden !important;
+}
+
 /**
  * SUNBURST Diagram
  */
